# ShoppingComp

./: README.md  README_ZH.md  pyproject.toml  requirements.txt
ShoppingCompJudge/: __init__.py  __main__.py  api_client.py  api_config.example.yaml  cli.py  config.py  core.py  hf_data.py  io_utils.py  prompt_loader.py  prompts.yaml  runner.py  tool_utils.py  tools.py
ShoppingCompJudge/judgers/: __init__.py  answer_match.py  rationale_validity.py  safety_pass_rate.py  scenario_coverage.py  sop.py
ShoppingCompJudge/metrics/: __init__.py  answer_match.py  rationale_validity.py  safety_pass_rate.py  scenario_coverage.py  sop.py
